# algorithms-c

./: .gitignore  CMakeLists.txt  Makefile  README.md  TARGET  ex.out
examples/clist/: Makefile.clist2  clist.mak  ex-1.c  ex-2.c
examples/dlist/: ex-1.c
examples/list/: ex-1  ex-1.c  list.mak
examples/pqueue/: Makefile.pqueue  ex-1.c
examples/queue/: ex-1.c  queue.mak
examples/recurse/: Makefile.factor  Makefile.facttail  ex-1.c  ex-2.c
examples/search/: Makefile.search  Makefile.spell  ex-1.c  ex-2.c
examples/set/: Makefile.cover  Makefile.set  ex-1.c  ex-2.c
examples/sort/: Makefile.directls  Makefile.sort  directls.mak  ex-1.c  ex-2.c
examples/stack/: Makefile.stack  ex-1.c  stack.mak
exercises/: dlist.c  dlist.h  dlist_ins_next_ANSWER.c  example.c  headers.h  list.c  list_ins_next.c  list_ins_next_ANSWER.c  list_ins_next_ANSWER2.c  list_ins_next_ANSWER3.c  list_ins_next_QUESTION.c  list_rem_last.c  list_rem_next_ANSWER.c  list_rem_next_QUESTION.c  list_replace.c  list_reverse.c  list_search.c  product.c  run.sh  sum_squares.c
exercises/notes/: list_replace.c  (+1 more)
include/: clist.h  const.h  cover.h  directls.h  dlist.h  fact.h  factor.h  facttail.h  heap.h  list.h  page.h  pqueue.h  queue.h  search.h  set.h  sort.h  spell.h  stack.h  traverse.h  utils.h
old/: Makefile  anon_llist_simple.c  list.c  list.h  list_demo.c  llist.c  utils.c
source/: bisearch.c  clist.c  cover.c  ctsort.c  directls.c  dlist.c  fact.c  factor.c  facttail.c  heap.c  issort.c  list.c  mgsort.c  page.c  qksort.c  queue.c  rxsort.c  set.c  spell.c  stack.c  utils.c
(+7 files in other folders)
